--- a/README.mkd
+++ b/README.mkd
@@ -8,8 +8,11 @@ The original SVG zebrapig logo is also provided for users who wish to create
 their own Exherbo-themed artwork.
 
 Each image (with the exception of the artwork in the `logo/` subdirectory) has
-been specially prepared for SVGmod processing. See `README.mkd` in the SVGmod
-distribution for more information on this process.
+been specially prepared for SVGmod processing, which allows automated changing
+of background color and widening of the image without its contents being
+flattened. See `README.mkd` in the
+[SVGmod distribution](http://github.com/replica/svgmod/tree/master/) for more
+information on this process.
 
 
 Contents
@@ -26,7 +29,7 @@ Contents
 
 * **/usr/share/exherbo-artwork/exherbo-zebrapig-zoink.svg**
 
-  Zoinking ZebraPig. "exherbo" font: *Distro Bold*. Zoink font: *Complete in
+  Zoinking ZebraPig. "exherbo" font: *Distro Bold*. "Zoink!" font: *Complete in
   Him*.
 
 * **/usr/share/exherbo-artwork/logo/*.svg**
