--- a/README.mkd
+++ b/README.mkd
@@ -12,7 +12,7 @@ been specially prepared for SVGmod processing, which allows automated changing
 of background color and widening of the image without its contents being
 flattened. See `README.mkd` in the
 [SVGmod distribution](http://github.com/replica/svgmod/tree/master/) for more
-information on this process.
+information on this process, and `man svgmod` for usage details.
 
 
 Contents
